# online-shopping-list

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
ansible/: deploy.yml  inventory.ini
ansible/group_vars/: web.yml
apps/clockify/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
apps/clockify/migrations/: 0001_initial.py  0002_clockifysettings_total_hours_and_more.py  0003_vacation.py  0004_clockifysettings_hour_rate.py
apps/clockify/templates/: clockify.html
apps/clockify/templatetags/: clockify_filters.py
apps/core/: context_processors.py  urls.py  views.py
apps/core/templates/: base.html  base_housing.html  login.html  manifest.json  navbar.html  pwa_head.html  pwa_register.html  sw.js
apps/house_construction/: apps.py  forms.py  models.py  urls.py  views.py
apps/house_construction/migrations/: 0001_initial.py  0002_priorityitem_hide.py  0003_projectimage.py  0004_additionalimage.py
apps/house_construction/templates/: media_detail.html  media_edit.html  media_list.html  priority_edit.html  priority_list.html  (+2 more)
apps/recipe/: admin.py  forms.py  models.py  urls.py  views.py
apps/shopping/: common.py  forms.py  models.py  serializers.py  urls.py  views.py
components/menu_collapse/: menu_collapse.html  menu_collapse.py
components/menu_collapse_item/: menu_collapse_item.html  menu_collapse_item.py
components/menu_item/: menu_item.html  menu_item.py
components/mobile_menu_bg/: mobile_menu_bg.css  mobile_menu_bg.html  mobile_menu_bg.js  mobile_menu_bg.py
conf/: asgi.py  finders.py  settings.py  storage.py  urls.py  wsgi.py
(+32 files in other folders)
