[tool.poetry]
name = "online-shopping-list"
version = "0.1.0"
description = ""
authors = ["Petr Sebik <sebikpetr@gmail.com>"]
readme = "README.md"
packages = [{include = "online_shopping_list"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
